<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        app:srcCompat="@drawable/login_booky_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginLeft="20dp"
        android:text="Add a book"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_toRightOf="@id/imageView"/>

    <EditText
        android:hint="@string/book_title_hint"
        android:id="@+id/edit_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"/>

    <EditText
        android:hint="@string/book_author_hint"
        android:id="@+id/edit_book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_book_title"
        android:layout_alignParentStart="true"/>

    <EditText
        android:hint="@string/book_genre_hint"
        android:id="@+id/edit_book_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_book_author"
        android:layout_alignParentStart="true"/>

    <EditText
        android:hint="@string/book_ISB_hint"
        android:id="@+id/edit_book_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_book_genre"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_book_genre"
        android:layout_toStartOf="@id/saveButton"
        android:layout_marginTop="0dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/edit_book_genre"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent" />

</RelativeLayout>